objects/Annuity_Payments__c.object
<CustomObject>
    <fields>
        <fullName>Annuity_Policy__c</fullName>
        <label>Annuity Policy</label>
        <referenceTo>Annuity_Policy__c</referenceTo>
        <relationshipName>Annuity_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>First_Payment_Date__c</fullName>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Months_before_increase__c</fullName>
        <label>Months before increase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Payments__c</fullName>
        <label>Number of Payments</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guaranteed</fullName>
                </value>
                <value>
                    <fullName>Life-contingent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent_Increase__c</fullName>
        <label>Percent Increase</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <formula>Annuity_Policy__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Number</label>
        <type>Text</type>
    </fields>
    <label>Annuity Payment</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Annuity Payment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annuity Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>